centralização de instanciamentos de telas, além de melhorias no código

--- a/Augustus Fashion/View/Telas Centrais/TelaPedido.resx
+++ b/Augustus Fashion/View/Telas Centrais/TelaPedido.resx
@@ -1293,4 +1293,7 @@
         r2GvZa9pr20/w37WtWI/296D3dmw92TvzS7s9l65TU9I0Cko+P9AAxuJxyU7OwAAAABJRU5ErkJggg==
 </value>
   </data>
+  <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
